# make-management-command

./: LICENSE  README.md  pyproject.toml
make_management_command/: cli.py
management/commands/: test1.py
tests/: test_make_management_command.py
